deployments/k8s/base/frontend/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: dashboard-image
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: runtime-config
              mountPath: /app/public/config.js
              subPath: config.js
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: dashboard-nginx-conf
        - name: runtime-config
          configMap:
            name: webui-runtime-config
